@@ -19,14 +19,14 @@
    "run-ee"                            ["with-profile" "+run,+ee" "run"]
    "run-with-repl"                     ["with-profile" "+run-with-repl" "repl"]
    "run-with-repl-ee"                  ["with-profile" "+run-with-repl,+ee" "repl"]
-   "ring"                              ["with-profile" "+ring" "ring"]
-   "ring-ee"                           ["with-profile" "+ring,+ee" "ring"]
+   ;; "ring"                              ["with-profile" "+ring" "ring"]
+   ;; "ring-ee"                           ["with-profile" "+ring,+ee" "ring"]
    "test"                              ["with-profile" "+test" "test"]
    "test-ee"                           ["with-profile" "+test,+ee" "test"]
    "bikeshed"                          ["with-profile" "+bikeshed" "bikeshed"
                                         "--max-line-length" "205"
                                         ;; see https://github.com/dakrone/lein-bikeshed/issues/41
-                                        "--exclude-profiles" "compare-h2-dbs,dev"]
+                                        "--exclude-profiles" "dev"]
    "check-namespace-decls"             ["with-profile" "+check-namespace-decls" "check-namespace-decls"]
    "eastwood"                          ["with-profile" "+eastwood" "eastwood"]
    "check-reflection-warnings"         ["with-profile" "+reflection-warnings" "check"]
@@ -36,8 +36,6 @@
    "lint"                              ["do" ["eastwood"] ["bikeshed"] ["check-namespace-decls"] ["docstring-checker"] ["cloverage"]]
    "repl"                              ["with-profile" "+repl" "repl"]
    "repl-ee"                           ["with-profile" "+repl,+ee" "repl"]
-   "strip-and-compress"                ["with-profile" "+strip-and-compress,-user,-dev" "run"]
-   "compare-h2-dbs"                    ["with-profile" "+compare-h2-dbs" "run"]
    "uberjar"                           ["uberjar"]
    "uberjar-ee"                        ["with-profile" "+ee" "uberjar"]}
 
@@ -49,9 +47,10 @@
   [[org.clojure/clojure "1.10.1"]
    [org.clojure/core.async "0.4.500"
     :exclusions [org.clojure/tools.reader]]
+   [joda-time/joda-time "2.10.8"]
    [org.clojure/core.logic "1.0.0"]
    [org.clojure/core.match "0.3.0"]                                   ; optimized pattern matching library for Clojure
-   [org.clojure/core.memoize "1.0.236"]                               ; needed by core.match; has useful FIFO, LRU, etc. caching mechanisms
+   [org.clojure/core.memoize "1.0.236"]                               ; needed by core.match and search; has useful FIFO, LRU, etc. caching mechanisms
    [org.clojure/data.csv "0.1.4"]                                     ; CSV parsing / generation
    [org.clojure/java.classpath "1.0.0"]                               ; examine the Java classpath from Clojure programs
    [org.clojure/java.jdbc "0.7.11"]                                   ; basic JDBC access from Clojure
@@ -67,7 +66,9 @@
    [aleph "0.4.6" :exclusions [org.clojure/tools.logging]]            ; Async HTTP library; WebSockets
    [bigml/histogram "4.1.3"]                                          ; Histogram data structure
    [buddy/buddy-core "1.5.0"                                          ; various cryptograhpic functions
-    :exclusions [commons-codec]]
+    :exclusions [commons-codec
+                 org.bouncycastle/bcprov-jdk15on
+                 org.bouncycastle/bcpkix-jdk15on]]
    [buddy/buddy-sign "3.0.0"]                                         ; JSON Web Tokens; High-Level message signing library
    [cheshire "5.10.0"]                                                ; fast JSON encoding (used by Ring JSON middleware)
    [clj-http "3.10.3"                                                 ; HTTP client
@@ -92,18 +93,19 @@
    [com.google.guava/guava "28.2-jre"]                                ; dep for BigQuery, Spark, and GA. Require here rather than letting different dep versions stomp on each other — see comments on #9697
    [com.h2database/h2 "1.4.197"]                                      ; embedded SQL database
    [com.taoensso/nippy "2.14.0"]                                      ; Fast serialization (i.e., GZIP) library for Clojure
-   [commons-codec/commons-codec "1.14"]                               ; Apache Commons -- useful codec util fns
-   [commons-io/commons-io "2.6"]                                      ; Apache Commons -- useful IO util fns
+   [commons-codec/commons-codec "1.15"]                               ; Apache Commons -- useful codec util fns
+   [commons-io/commons-io "2.8.0"]                                    ; Apache Commons -- useful IO util fns
    [commons-validator/commons-validator "1.6"                         ; Apache Commons -- useful validation util fns
     :exclusions [commons-beanutils
                  commons-digester
                  commons-logging]]
    [compojure "1.6.1" :exclusions [ring/ring-codec]]                  ; HTTP Routing library built on Ring
    [crypto-random "1.2.0"]                                            ; library for generating cryptographically secure random bytes and strings
-   [dk.ative/docjure "1.13.0"]                                        ; Excel export
+   [dk.ative/docjure "1.14.0" :exclusions [org.apache.poi/poi
+                                           org.apache.poi/poi-ooxml]] ; excel export
    [environ "1.2.0"]                                                  ; easy environment management
    [hiccup "1.0.5"]                                                   ; HTML templating
-   [honeysql "0.9.5" :exclusions [org.clojure/clojurescript]]         ; Transform Clojure data structures to SQL
+   [honeysql "1.0.461" :exclusions [org.clojure/clojurescript]]       ; Transform Clojure data structures to SQL
    [instaparse "1.4.10"]                                              ; Make your own parser
    [io.forward/yaml "1.0.9"                                           ; Clojure wrapper for YAML library SnakeYAML (which we already use for liquidbase)
     :exclusions [org.clojure/clojure
@@ -111,14 +113,17 @@
                  org.yaml/snakeyaml]]
    [javax.xml.bind/jaxb-api "2.4.0-b180830.0359"]                     ; add the `javax.xml.bind` classes which we're still using but were removed in Java 11
    [kixi/stats "0.4.4" :exclusions [org.clojure/data.avl]]            ; Various statistic measures implemented as transducers
-   [me.raynes/fs "1.4.6"]                                             ; Filesystem tools
+   [me.raynes/fs "1.4.6"                                              ; Filesystem tools
+    :exclusions [org.apache.commons/commons-compress]]
    [medley "1.3.0"]                                                   ; lightweight lib of useful functions
    [metabase/connection-pool "1.1.1"]                                 ; simple wrapper around C3P0. JDBC connection pools
    [metabase/saml20-clj "2.0.0"]                                      ; EE SAML integration
    [metabase/throttle "1.0.2"]                                        ; Tools for throttling access to API endpoints and other code pathways
+   [net.cgrand/macrovich "0.2.1"]                                     ; utils for writing macros for both Clojure & ClojureScript
    [net.redhogs.cronparser/cron-parser-core "3.4"                     ; describe Cron schedule in human-readable language
-    :exclusions [org.slf4j/slf4j-api]]
+    :exclusions [org.slf4j/slf4j-api joda-time]]                      ; exclude joda time 2.3 which has outdated timezone information
    [net.sf.cssbox/cssbox "4.12" :exclusions [org.slf4j/slf4j-api]]    ; HTML / CSS rendering
+   [org.apache.commons/commons-compress "1.20"]                       ; compression utils
    [org.apache.commons/commons-lang3 "3.10"]                          ; helper methods for working with java.lang stuff
    [org.apache.logging.log4j/log4j-api "2.13.3"]                      ; apache logging framework
    [org.apache.logging.log4j/log4j-1.2-api "2.13.3"]                  ; add compatibility with log4j 1.2
@@ -126,32 +131,38 @@
    [org.apache.logging.log4j/log4j-jcl "2.13.3"]                      ; allows the commons-logging API to work with log4j 2
    [org.apache.logging.log4j/log4j-liquibase "2.13.3"]                ; liquibase logging via log4j 2
    [org.apache.logging.log4j/log4j-slf4j-impl "2.13.3"]               ; allows the slf4j API to work with log4j 2
+   [org.apache.poi/poi "5.0.0"]                                       ; Work with Office documents (e.g. Excel spreadsheets) -- newer version than one specified by Docjure
+   [org.apache.poi/poi-ooxml "5.0.0"
+    :exclusions [org.bouncycastle/bcprov-jdk15on
+                 org.bouncycastle/bcpkix-jdk15on]]
    [org.apache.sshd/sshd-core "2.4.0"]                                ; ssh tunneling and test server
-   [org.bouncycastle/bcprov-jdk15on "1.65"]                           ; Bouncy Castle crypto library -- explicit version of BC specified to resolve illegal reflective access errors
+   [org.bouncycastle/bcprov-jdk15on "1.68"]                           ; Bouncy Castle crypto library -- explicit version of BC specified to resolve illegal reflective access errors
+   [org.bouncycastle/bcpkix-jdk15on "1.68"]
    [org.clojars.pntblnk/clj-ldap "0.0.16"]                            ; LDAP client
    [org.eclipse.jetty/jetty-server "9.4.32.v20200930"]                ; We require JDK 8 which allows us to run Jetty 9.4, ring-jetty-adapter runs on 1.7 which forces an older version
    [org.flatland/ordered "1.5.9"]                                     ; ordered maps & sets
    [org.liquibase/liquibase-core "3.6.3"                              ; migration management (Java lib)
     :exclusions [ch.qos.logback/logback-classic]]
    [org.mariadb.jdbc/mariadb-java-client "2.6.2"]                     ; MySQL/MariaDB driver
-   [org.postgresql/postgresql "42.2.8"]                               ; Postgres driver
+   [org.postgresql/postgresql "42.2.18"]                              ; Postgres driver
    [org.slf4j/slf4j-api "1.7.30"]                                     ; abstraction for logging frameworks -- allows end user to plug in desired logging framework at deployment time
    [org.tcrawley/dynapath "1.1.0"]                                    ; Dynamically add Jars (e.g. Oracle or Vertica) to classpath
    [org.threeten/threeten-extra "1.5.0"]                               ; extra Java 8 java.time classes like DayOfMonth and Quarter
    [org.yaml/snakeyaml "1.23"]                                        ; YAML parser (required by liquibase)
    [potemkin "0.4.5" :exclusions [riddley]]                           ; utility macros & fns
    [pretty "1.0.4"]                                                   ; protocol for defining how custom types should be pretty printed
-   [prismatic/schema "1.1.11"]                                        ; Data schema declaration and validation library
+   [prismatic/schema "1.1.12"]                                        ; Data schema declaration and validation library
    [redux "0.1.4"]                                                    ; Utility functions for building and composing transducers
    [riddley "0.2.0"]                                                  ; code walking lib -- used interally by Potemkin, manifold, etc.
-   [ring/ring-core "1.8.0"]
+   [ring/ring-core "1.8.1"]
    [ring/ring-jetty-adapter "1.8.1"]                                  ; Ring adapter using Jetty webserver (used to run a Ring server for unit tests)
    [ring/ring-json "0.5.0"]                                           ; Ring middleware for reading/writing JSON automatically
    [stencil "0.5.0"]                                                  ; Mustache templates for Clojure
-   [toucan "1.15.1" :exclusions [org.clojure/java.jdbc                ; Model layer, hydration, and DB utilities
+   [toucan "1.15.3" :exclusions [org.clojure/java.jdbc                ; Model layer, hydration, and DB utilities
                                  org.clojure/tools.logging
                                  org.clojure/tools.namespace
                                  honeysql]]
+   [user-agent "0.1.0"]                                               ; User-Agent string parser, for Login History page & elsewhere
    [weavejester/dependency "0.2.1"]                                   ; Dependency graphs and topological sorting
    ]
 
@@ -168,7 +179,6 @@
 
   :jvm-opts
   ["-XX:+IgnoreUnrecognizedVMOptions"                                 ; ignore things not recognized for our Java version instead of refusing to start
-   "-Xverify:none"                                                    ; disable bytecode verification when running in dev so it starts slightly faster
    "-Djava.awt.headless=true"]                                        ; prevent Java icon from randomly popping up in dock when running `lein ring server`
 
   :target-path "target/%s"
@@ -177,7 +187,7 @@
   ["-target" "1.8", "-source" "1.8"]
 
   :source-paths
-  ["src" "backend/mbql/src"]
+  ["src" "backend/mbql/src" "shared/src"]
 
   :java-source-paths
   ["java"]
@@ -193,16 +203,25 @@
    {:source-paths ["enterprise/backend/src"]
     :test-paths   ["enterprise/backend/test"]}
 
+   :socket
+   {:dependencies
+    [[vlaaad/reveal "1.3.196"]]
+    :jvm-opts
+    ["-Dclojure.server.repl={:port 5555 :accept clojure.core.server/repl}"]}
+
    :dev
    {:source-paths ["dev/src" "local/src"]
-    :test-paths   ["test" "backend/mbql/test"]
+    :test-paths   ["test" "backend/mbql/test" "shared/test"]
 
     :dependencies
     [[clj-http-fake "1.0.3" :exclusions [slingshot]]                  ; Library to mock clj-http responses
      [jonase/eastwood "0.3.11" :exclusions [org.clojure/clojure]]     ; to run Eastwood
      [methodical "0.9.4-alpha"]
      [pjstadig/humane-test-output "0.10.0"]
-     [ring/ring-mock "0.4.0"]]
+     [reifyhealth/specmonstah "2.0.0"]                                ; Generate fixtures to test huge databases
+     [ring/ring-mock "0.4.0"]
+     [talltale "0.5.4"]                                               ; Generate realistic data for fixtures
+     ]
 
     :plugins
     [[lein-environ "1.1.0"] ; easy access to environment variables
@@ -224,7 +243,8 @@
     ["-Dlogfile.path=target/log"]
 
     :repl-options
-    {:init-ns user}} ; starting in the user namespace is a lot faster than metabase.core since it has less deps
+    {:init-ns user ; starting in the user namespace is a lot faster than metabase.core since it has less deps
+     :timeout 180000}}
 
    ;; output test results in JUnit XML format
    :junit
@@ -246,7 +266,7 @@
      :format-result metabase.junit/format-result}}
 
    :ci
-   {:jvm-opts ["-Xmx2500m"]}
+   {}
 
    :install
    {}
@@ -272,26 +292,27 @@
      :repl-options
      {:init    (do (require 'metabase.core)
                    (metabase.core/-main))
-      :timeout 60000}}]
+      :timeout 180000}}]
 
+   ;; DISABLED FOR NOW SINCE IT'S BROKEN -- SEE #12181
    ;; start the dev HTTP server with 'lein ring server'
-   :ring
-   [:exclude-tests
-    :include-all-drivers
-    {:dependencies
-     ;; used internally by lein ring to track namespace changes. Newer version contains fix by yours truly with 1000x
-     ;; faster launch time
-     [[ns-tracker "0.4.0"]]
+   ;; :ring
+   ;; [:exclude-tests
+   ;;  :include-all-drivers
+   ;;  {:dependencies
+   ;;   ;; used internally by lein ring to track namespace changes. Newer version contains fix by yours truly with 1000x
+   ;;   ;; faster launch time
+   ;;   [[ns-tracker "0.4.0"]]
 
-     :plugins
-     [[lein-ring "0.12.5" :exclusions [org.clojure/clojure]]]
+   ;;   :plugins
+   ;;   [[lein-ring "0.12.5" :exclusions [org.clojure/clojure]]]
 
-     :ring
-     {:handler      metabase.handler/app
-      :init         metabase.core/init!
-      :async?       true
-      :destroy      metabase.core/destroy
-      :reload-paths ["src"]}}]
+   ;;   :ring
+   ;;   {:handler      metabase.server.handler/app
+   ;;    :init         metabase.core/init!
+   ;;    :async?       true
+   ;;    :destroy      metabase.core/destroy
+   ;;    :reload-paths ["src"]}}]
 
    :with-include-drivers-middleware
    {:plugins
@@ -367,7 +388,7 @@
                            #_:unused-locals]
       :exclude-linters    [    ; Turn this off temporarily until we finish removing self-deprecated functions & macros
                            :deprecations
-                           ;; this has a fit in libs that use Potemin `import-vars` such as `java-time`
+                           ;; this has a fit in libs that use Potemkin `import-vars` such as `java-time`
                            :implicit-dependencies
                            ;; too many false positives for now
                            :unused-ret-vals]}}]
@@ -391,35 +412,31 @@
 
    :check-namespace-decls
    [:linters-common
-    {:plugins               [[lein-check-namespace-decls "1.0.2"]]
-     :check-namespace-decls {:prefix-rewriting true}}]
+    {:plugins               [[lein-check-namespace-decls "1.0.3"]]
+     :check-namespace-decls {:prefix-rewriting false}}]
 
    :cloverage
    [:test-common
     {:dependencies [[camsaul/cloverage "1.2.1.1" :exclusions [riddley]]]
      :plugins      [[camsaul/lein-cloverage  "1.2.1.1"]]
-     :source-paths ^:replace ["src" "backend/mbql/src" "enterprise/backend/src"]
-     :test-paths   ^:replace ["test" "backend/mbql/test" "enterprise/backend/test"]
+     :source-paths ^:replace ["src" "backend/mbql/src" "enterprise/backend/src" "shared/src"]
+     :test-paths   ^:replace ["test" "backend/mbql/test" "enterprise/backend/test" "shared/test"]
      :cloverage    {:fail-threshold 69
                     :exclude-call
                     [;; don't instrument logging forms, since they won't get executed as part of tests anyway
                      ;; log calls expand to these
                      clojure.tools.logging/logf
-                     clojure.tools.logging/logp]}}]
+                     clojure.tools.logging/logp]
+                    ;; don't instrument Postgres/MySQL driver namespaces, because we don't current run tests for them
+                    ;; as part of recording test coverage, which means they can give us false positives.
+                    :ns-exclude-regex
+                    [#"metabase\.driver\.mysql"
+                     #"metabase\.driver\.postgres"]}}]
 
    ;; build the uberjar with `lein uberjar`
    :uberjar
    {:auto-clean true
     :aot        :all}
-
-   ;; lein strip-and-compress my-plugin.jar [path/to/metabase.jar]
-   ;; strips classes from my-plugin.jar that already exist in other JAR and recompresses with higher compression ratio.
-   ;; Second arg (other JAR) is optional; defaults to target/uberjar/metabase.jar
-   :strip-and-compress
-   {:aliases      ^:replace {"run" ["run"]}
-    :source-paths ^:replace ["lein-commands/strip-and-compress"]
-    :test-paths   ^:replace []
-    :main         ^:skip-aot metabase.strip-and-compress-module}
 
    ;; Profile Metabase start time with `lein profile`
    :profile
@@ -431,9 +448,4 @@
    {:main org.h2.tools.Shell}
 
    :generate-automagic-dashboards-pot
-   {:main metabase.automagic-dashboards.rules}
-
-   :compare-h2-dbs
-   {:aliases      ^:replace  {"run" ["run"]}
-    :main         ^:skip-aot metabase.cmd.compare-h2-dbs
-    :source-paths ["test"]}})
+   {:main metabase.automagic-dashboards.rules}})
